Support login as an alternative to `INTERNAL_IPS`

--- a/trackman/templates/error403.html
+++ b/trackman/templates/error403.html
@@ -1,1 +1,7 @@
-403 Forbidden
+{% extends "base.html" %}
+{% set page_title="Forbidden" %}
+{% block content %}
+<div class="container">
+<h2>Forbidden</h2>
+</div>
+{% endblock %}
