--- a/trackman/templates/error404.html
+++ b/trackman/templates/error404.html
@@ -1,1 +1,7 @@
-404 Not Found
+{% extends "base.html" %}
+{% set page_title="Not Found" %}
+{% block content %}
+<div class="container">
+<h2>Not Found</h2>
+</div>
+{% endblock %}
