--- a/trackman/templates/error405.html
+++ b/trackman/templates/error405.html
@@ -1,1 +1,7 @@
-405 Method Not Allowed
+{% extends "base.html" %}
+{% set page_title="Method Not Allowed" %}
+{% block content %}
+<div class="container">
+<h2>Method Not Allowed</h2>
+</div>
+{% endblock %}
