--- a/trackman/templates/base.html
+++ b/trackman/templates/base.html
@@ -28,6 +28,19 @@
                         {% block nav_login_all %}<li class="nav-item"><a class="nav-link" href="{{ url_for('trackman_private.login_all') }}">All DJs</a></li>{% endblock %}
                         {% block nav_register %}<li class="nav-item"><a class="nav-link" href="{{ url_for('trackman_private.register') }}">Register New DJ</a></li>{% endblock %}
                     </ul>
+
+{% if current_user.is_authenticated %}
+                    <span class="navbar-text ml-auto mr-sm-2">
+                        Logged in as {{ current_user.id_token.name }}
+                    </span>
+                    <form action="{{ url_for('auth.logout') }}" method="post" class="form-inline">
+                        <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
+                        <button type="submit" class="btn btn-outline-secondary">
+                            <span class="oi oi-account-logout"></span>
+                            Logout
+                        </button>
+                    </form>
+{% endif %}
                 </div>
             </div>
         </nav>
