--- a/trackman/templates/error400.html
+++ b/trackman/templates/error400.html
@@ -1,1 +1,7 @@
-400 Bad Request
+{% extends "base.html" %}
+{% set page_title="Bad Request" %}
+{% block content %}
+<div class="container">
+<h2>Bad Request</h2>
+</div>
+{% endblock %}
