Add DJ claim feature and restrict login
DJs can now only log into DJs that they have claimed. When registering a
new DJ through the DJ interface, a claim is automatically created for
the current user.

The workflow to create and process claims for DJs that already exist or
are created through the admin interface has not yet been built.

--- a/trackman/templates/log.html
+++ b/trackman/templates/log.html
@@ -2,7 +2,7 @@
 {% block header %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light trackman-header mb-2">
     <div class="navbar-header mr-sm-3">
-        <span class="navbar-brand">{{ trackman_name }}</span>
+        <span class="navbar-brand">{{ config.TRACKMAN_NAME }}</span>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#trackman-top-collapse" aria-controls="trackman-top-collapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
