--- a/trackman/templates/base.html
+++ b/trackman/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <title>{% if page_title %}{{ page_title }} &ndash; {% endif %}{{ trackman_name }}</title>
+        <title>{% if page_title %}{{ page_title }} &ndash; {% endif %}{{ config.TRACKMAN_NAME }}</title>
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-darkly.min.css') }}" />
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css', v=4) }}" />
@@ -46,14 +46,16 @@
         </nav>
 {% endblock %}
 
-<div class="container-fluid">
+<div class="container">
     {% for msg in get_flashed_messages() %}
     <div class="alert alert-info">
         <button type="button" class="close" data-dismiss="alert">&times;</button>
         {{ msg }}
     </div>
     {% endfor %}
+</div>
 
+<div class="container-fluid">
 {% block content %}
 {% endblock %}
 </div>
