--- a/trackman/templates/login.html
+++ b/trackman/templates/login.html
@@ -4,6 +4,15 @@
 <div class="container">
 <h2>DJ Login</h2>
 
+{% if onair_djset is not none %}
+<div class="alert alert-warning" role="alert">
+    <h4 class="alert-heading">DJ On Air</h4>
+    <p class="mb-0"><strong>{{ onair_djset.dj.airname }}</strong> is currently
+    on air. If you login as another DJ and start logging tracks, they will be
+    logged out.</p>
+</div>
+{% endif %}
+
 <form action="{{ url_for('trackman_private.login') }}" method="post">
     <input type="hidden" name="_csrf_token" value="{{ csrf_token() }}" />
 
@@ -11,7 +20,7 @@
         <select name="dj" class="form-control">
             <option value="">Select DJ</option>
             {% for dj in djs %}
-            <option value="{{ dj.id }}">{{ dj.airname|truncate(50) }}</option>
+            <option value="{{ dj.id }}"{% if onair_djset is not none and onair_djset.dj.id == dj.id %} selected="selected"{% endif %}>{{ dj.airname|truncate(50) }}</option>
             {% endfor %}
         </select>
     </div>
