--- a/trackman/templates/reactivate.html
+++ b/trackman/templates/reactivate.html
@@ -54,7 +54,7 @@
     </div>
 
     <div class="form-group row">
-        <label class="col-sm-3 col-form-label control-label">Genres you can DJ</label>
+        <label class="col-sm-3 col-form-label control-label">Genres you DJ</label>
         <div class="col-sm-9">
             <span class="form-control-plaintext">{{ dj.genres }}</span>
         </div>
