--- a/trackman/templates/register.html
+++ b/trackman/templates/register.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="form-group row{% if form.genres.errors|length > 0 %} has-error{% endif %}">
-        <label for="id_genres" class="col-sm-3 col-form-label control-label">Genres you can DJ</label>
+        <label for="id_genres" class="col-sm-3 col-form-label control-label">Genres you DJ</label>
         <div class="col-sm-9">
             <input type="text" name="genres" id="id_genres"
                  value="{{ form.genres.data or "" }}" required="required"
