--- a/trackman/templates/admin/dj_edit.html
+++ b/trackman/templates/admin/dj_edit.html
@@ -105,4 +105,30 @@
         </a>
     </div>
 </form>
+
+<div class="mt-3">
+<h2>Claims</h2>
+<form action="{{ url_for('.dj_edit_claims', dj_id=dj.id) }}" method="POST">
+{{ form.hidden_tag() }}
+
+<table class="table table-striped table-hover">
+    <tr>
+        <th>Subject</th>
+        <th>Actions</th>
+    </tr>
+{% for claim in claims %}
+    <tr>
+        <td>{{ claim.sub }}</td>
+        <td class="row-options">
+            <button type="submit" class="btn btn-danger" name="claim_id" value="{{ claim.id }}">
+                <span class="oi oi-x"></span>
+                Remove
+            </button>
+        </td>
+    </tr>
+{% endfor %}
+</table>
+</form>
+</div>
+
 {% endblock %}
