--- a/trackman/templates/log.html
+++ b/trackman/templates/log.html
@@ -70,8 +70,8 @@
 
 <div class="floating-alerts" id="trackman_alerts"></div> 
 
-<div class="panel panel-default trackman-panel" id="trackman_playlist_panel">
-    <table class='table table-condensed'>
+<div class="card mt-1 trackman-card" id="trackman_playlist_panel">
+    <table class='table table-condensed mb-0'>
         <thead title="This is a list of the tracks you've played. If you need to make any changes or corrections, you can do that here.">
             <tr>
                 <th>Time</th>
@@ -89,14 +89,14 @@
     </table>
 
     <div class="row-table">
-        <table class='table table-condensed table-striped table-hover' id="playlist">
+        <table class='table table-condensed table-striped table-hover mb-0' id="playlist">
             <tbody>
             </tbody>
         </table>
     </div>
 </div>
 
-<div class="trackman-entry">
+<div class="card mt-1 trackman-entry">
     <div class="row">
         <div class="form-group col-md-3">
             <div class="input-group">
@@ -186,7 +186,7 @@
 </div>
 
 <!--
-<div class="control-panel">
+<div class="card mt-1 control-panel">
     <div class="row psa-controls">
         <button id="new-queue" class="btn btn-primary">
             <span class="oi oi-plus"></span>
@@ -216,8 +216,8 @@
 </div>
 -->
 
-<div class="panel panel-default trackman-panel" id="trackman_queue_panel">
-    <table class='table table-condensed'>
+<div class="card mt-1 trackman-card" id="trackman_queue_panel">
+    <table class='table table-condensed mb-0'>
         <thead title="This is your queue. You can enter tracks ahead of time and access them from here. When you're ready to play them, just press their play button.">
             <tr>
                 <th>Artist</th>
@@ -241,12 +241,12 @@
     </div>
 </div>
 
-<div class="panel panel-default trackman-panel" id="trackman_search_panel">
-    <div class="panel-heading">
-        <h3 class="panel-title">Search Results</h3>
+<div class="card mt-1 trackman-card" id="trackman_search_panel">
+    <div class="card-header">
+        Search Results
     </div>
 
-    <table class='table table-condensed'>
+    <table class='table table-condensed mb-0'>
         <thead title="These are your track search results. When you start to enter track information, this section will update with similar tracks that are already in our database.">
             <tr>
                 <th>Artist</th>
@@ -263,7 +263,7 @@
     </table>
 
     <div class="row-table trackman-search-results">
-        <table class='table table-condensed table-striped table-hover' id="search">
+        <table class='table table-condensed table-striped table-hover mb-0' id="search">
             <tbody>
             </tbody>
         </table>
