Add colon at end of each <dt> in public playlist
This matches what we do for the library views, so we're consistent. If
we want to get rid of the colon, we should do it in both places.

--- a/trackman/templates/public/playlists_track.html
+++ b/trackman/templates/public/playlists_track.html
@@ -9,13 +9,13 @@
 <div class="card mb-2">
     <div class="card-body">
         <dl>
-            <dt>Track</dt>
+            <dt>Track:</dt>
             <dd>{{ track.title }}
 
-            <dt>Artist</dt>
+            <dt>Artist:</dt>
             <dd>{{ track.artist }}</dd>
 
-            <dt>Album</dt>
+            <dt>Album:</dt>
             <dd>{{ track.album }}</dd>
         </dl>
 
