--- a/trackman/templates/public/index.html
+++ b/trackman/templates/public/index.html
@@ -9,16 +9,16 @@
 <h2>Now Playing</h2>
 
 <dl>
-    <dt>Track</dt>
+    <dt>Track:</dt>
     <dd id="now_playing_track"><a href="{{ url_for('public.playlists_track', track_id=track.track.id) }}">{{ track.track.title }}</a></dd>
 
-    <dt>Artist</dt>
+    <dt>Artist:</dt>
     <dd id="now_playing_artist">{{ track.track.artist }}</dd>
 
-    <dt>Album</dt>
+    <dt>Album:</dt>
     <dd id="now_playing_album">{{ track.track.album }}</dd>
 
-    <dt>DJ</dt>
+    <dt>DJ:</dt>
     <dd id="now_playing_dj"><a href="{{ url_for('public.playlists_dj_sets', dj_id=track.dj.id) }}">{{ track.dj.airname }}</a></dd>
 </dl>
 {% endblock %}
