--- a/trackman/templates/public/base.html
+++ b/trackman/templates/public/base.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8" />
+        <meta charset="utf-8"/>
+        <meta name="viewport" content="width=device-width, initial-scale=1"/>
 
         <title>{% if page_title %}{{ page_title }} &ndash; {% endif %}{{ config.TRACKMAN_NAME }}</title>
 
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-darkly.min.css') }}" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css', v=4) }}" />
-        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='open-iconic/font/css/open-iconic-bootstrap.min.css') }}" />
-        <link rel="alternate" type="application/atom+xml" href="{{ url_for('public.last15_feed') }}" title="Last 15 Tracks Feed"  />
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/bootstrap-darkly.min.css') }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/admin.css', v=4) }}"/>
+        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='open-iconic/font/css/open-iconic-bootstrap.min.css') }}"/>
+        <link rel="alternate" type="application/atom+xml" href="{{ url_for('public.last15_feed') }}" title="Last 15 Tracks Feed" />
 
         {% block css %}
         {% endblock %}
 
         <link rel="shortcut icon"
-            href="{{ url_for('static', filename='img/favicon.ico') }}" />
+            href="{{ url_for('static', filename='img/favicon.ico') }}"/>
         <link rel="apple-touch-icon"
-            href="{{ url_for('static', filename='img/icon.png') }}" />
+            href="{{ url_for('static', filename='img/icon.png') }}"/>
     </head>
     <body>
 {% block header %}
